--- a/krillnotes-desktop/src-tauri/Cargo.toml
+++ b/krillnotes-desktop/src-tauri/Cargo.toml
@@ -24,4 +24,5 @@ tauri-plugin-dialog = "2.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 krillnotes-core = { path = "../../krillnotes-core" }
+mimalloc = { version = "0.1", default-features = false }
 
