--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["krillnotes-core", "krillnotes-desktop/src-tauri"]
 resolver = "2"
 
 [workspace.dependencies]
-rusqlite = { version = "0.38", features = ["bundled"] }
+rusqlite = { version = "0.38", features = ["bundled-sqlcipher-vendored-openssl"] }
 rhai = { version = "1.24", features = ["sync"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
