--- a/krillnotes-desktop/package.json
+++ b/krillnotes-desktop/package.json
@@ -23,9 +23,11 @@
     "@tauri-apps/plugin-opener": "^2",
     "@types/dompurify": "^3.0.5",
     "dompurify": "^3.3.1",
+    "i18next": "^25.8.13",
     "lucide-react": "^0.575.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-i18next": "^16.5.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
